<resources>
    <string name="app_name">Test App</string>
    <string name="header_name">Name</string>
    <string name="name_label">Name:</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="address_label">Address:</string>
    <string name="street_label">Street:</string>
    <string name="suite_label">Suite:</string>
    <string name="city_label">City:</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>