<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.UserDetailFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="@string/header_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="303dp" />

    <TextView
        android:id="@+id/txtNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="279dp"
        android:text="@string/name_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserLabel" />

    <TextView
        android:id="@+id/txtUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="18dp"
        android:text="@string/username_label"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/txtEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameLabel" />

    <TextView
        android:id="@+id/txtEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="279dp"
        android:text="@string/email_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameLabel" />

    <TextView
        android:id="@+id/txtAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="279dp"
        android:text="@string/address_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLabel" />

    <TextView
        android:id="@+id/txtStreetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="229dp"
        android:text="@string/street_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddressLabel" />

    <TextView
        android:id="@+id/txtSuiteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="211dp"
        android:text="@string/suite_label"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStreetLabel" />

    <TextView
        android:id="@+id/txtCityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="229dp"
        android:text="@string/city_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSuiteLabel" />

    <TextView
        android:id="@+id/txtDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtUserLabel" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailName" />

    <TextView
        android:id="@+id/txtDetailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <TextView
        android:id="@+id/txtStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtStreetLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailEmail" />

    <TextView
        android:id="@+id/txtSuite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtSuiteLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtStreet" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:text="@string/placeholder_text"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtCityLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtSuite" />

</androidx.constraintlayout.widget.ConstraintLayout>